feat: loading替换；其他细节修改

--- a/HYNewNest.xcodeproj/xcshareddata/xcschemes/NewNest_dev.xcscheme
+++ b/HYNewNest.xcodeproj/xcshareddata/xcschemes/NewNest_dev.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "3D13385024AD8F9B00B29783"
-               BuildableName = "HYNewNest.app"
+               BuildableName = "&#x5e01;&#x6e38;.app"
                BlueprintName = "HYNewNest"
                ReferencedContainer = "container:HYNewNest.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3D13385024AD8F9B00B29783"
-            BuildableName = "HYNewNest.app"
+            BuildableName = "&#x5e01;&#x6e38;.app"
             BlueprintName = "HYNewNest"
             ReferencedContainer = "container:HYNewNest.xcodeproj">
          </BuildableReference>
@@ -62,7 +62,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3D13385024AD8F9B00B29783"
-            BuildableName = "HYNewNest.app"
+            BuildableName = "&#x5e01;&#x6e38;.app"
             BlueprintName = "HYNewNest"
             ReferencedContainer = "container:HYNewNest.xcodeproj">
          </BuildableReference>
