--- a/HYNewNest/AppEntry/Info.plist
+++ b/HYNewNest/AppEntry/Info.plist
@@ -20,6 +20,10 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
+			<string>alipayqr://</string>
+		</dict>
+		<dict>
+			<key>CFBundleURLName</key>
 			<string>mqq://</string>
 		</dict>
 		<dict>
@@ -43,6 +47,7 @@
 		<string>sinaweibo</string>
 		<string>weixin</string>
 		<string>dcbox</string>
+		<string>alipayqr</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
