--- a/HYNewNest/AppEntry/Info.plist
+++ b/HYNewNest/AppEntry/Info.plist
@@ -58,6 +58,10 @@
 	</dict>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>小游需要您的允许才能为您保存图片</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
