feat: VIP私享会2.0弹窗样式

--- a/HYNewNest/AppEntry/Info.plist
+++ b/HYNewNest/AppEntry/Info.plist
@@ -52,7 +52,7 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLIconFile</key>
-			<string>彩票_0000</string>
+			<string></string>
 			<key>CFBundleURLName</key>
 			<string>weixin</string>
 			<key>CFBundleURLSchemes</key>
@@ -117,5 +117,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>方正兰亭大黑_GBK.ttf</string>
+	</array>
 </dict>
 </plist>
