--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,8 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
+fastlane/README.md
+fastlane/qrCode.png
 
 # Code Injection
 #
